--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
 # Supabase
-VITE_SUPABASE_URL=your_supabase_url
+VITE_SUPABASE_URL=https://rkgfdygvjnpqbhraaxsk.supabase.co
 VITE_SUPABASE_ANON_KEY=your_supabase_anon_key
 
 # Backend API
@@ -8,7 +8,7 @@ VITE_API_BASE_URL=http://localhost:3001
 # Server (Backend)
 PORT=3001
 NODE_ENV=development
-SUPABASE_URL=your_supabase_url
+SUPABASE_URL=https://rkgfdygvjnpqbhraaxsk.supabase.co
 SUPABASE_SERVICE_ROLE_KEY=your_service_role_key
 SUPABASE_JWT_SECRET=your_jwt_secret
 
